fixed overflow flaw

--- a/resources/styles/styles.less
+++ b/resources/styles/styles.less
@@ -106,7 +106,7 @@
   }
   
   a.album:hover > div {
-   opacity: 1; 
+   opacity: 1;
    -webkit-transition: @hover-animation-fadein;
       -moz-transition: @hover-animation-fadein;
       -o-transition: @hover-animation-fadein;
@@ -224,7 +224,7 @@
 }
 
 body {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 div#main {
